# hyprsnip

./: Cargo.toml  README.md
crates/hyprsnip-cli/: Cargo.toml
crates/hyprsnip-cli/src/: main.rs
crates/hyprsnip-config/: Cargo.toml
crates/hyprsnip-config/src/: lib.rs
crates/hyprsnip-utils/: Cargo.toml
crates/hyprsnip-utils/src/: lib.rs
