[workspace]
resolver = "2"
members = [
  "crates/hyprsnip-cli",
  "crates/hyprsnip-config",
  "crates/hyprsnip-utils",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
toml = "0.8.19"
thiserror = "2.0.9"
directories = "5.0.1"
